--- a/stlye.css
+++ b/stlye.css
@@ -98,6 +98,9 @@ span {
 }
 .intro-body {
   padding-left: 0.5em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .repositories {
   text-decoration: none;
