--- a/stlye.css
+++ b/stlye.css
@@ -61,6 +61,7 @@ body {
 .about-title {
   display: block;
   color: #af1c1c;
+  text-shadow: 1px 1px 1px #f0eff0;
   font-size: 5em;
   font-family: 'Oswald', sans-serif;
 }
@@ -242,7 +243,7 @@ p.copyright::before {
 
 .close:hover,
 .close:focus {
-  color: black;
+  color: #a99567;
   text-decoration: none;
   cursor: pointer;
 }
