--- a/css/sections/_skills.scss
+++ b/css/sections/_skills.scss
@@ -1,4 +1,4 @@
-.skills {
+#skills {
   margin-top: 1em;
   background: url(../img/laptop.jpg) center center repeat fixed;
   background-size: cover;
@@ -11,7 +11,7 @@
     background: rgba(255, 255, 255, 0.582);
     border-radius: 30%;
     padding: 1em;
-    margin: 5px;
+    margin: 1em;
     min-width: 490px;
   }
 
