--- a/css/sections/_certs.scss
+++ b/css/sections/_certs.scss
@@ -77,7 +77,7 @@
   text-decoration: none;
 }
 @media (min-width: 1366px) {
-  .modal-content {
+  .modal-stuff {
     background-color: #f0eff0;
     margin: 10vh auto; /* 15% from the top and centered */
     padding: 20px;
