--- a/css/main.css
+++ b/css/main.css
@@ -164,9 +164,9 @@ body a {
           justify-content: center;
 }
 
-#skills .images {
+#skills .icons {
   background: rgba(255, 255, 255, 0.582);
-  border-radius: 30%;
+  border-radius: 50%;
   padding: 1em;
   margin: 1em;
   min-width: 490px;
