--- a/css/sections/_skills.scss
+++ b/css/sections/_skills.scss
@@ -7,9 +7,9 @@
   align-items: center;
   justify-content: center;
 
-  .images {
+  .icons {
     background: rgba(255, 255, 255, 0.582);
-    border-radius: 30%;
+    border-radius: 50%;
     padding: 1em;
     margin: 1em;
     min-width: 490px;
