--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,8 @@ body a {
   text-decoration: none;
 }
 
-#welcome {
-  background: url(../img/welcome.jpg) fixed;
+#top {
+  background-color: #2f2f28;
   background-size: cover;
   background-position: center;
   height: 80vh;
@@ -22,24 +22,38 @@ body a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: #f0eff0;
+  border: 1px solid #f0eff0;
 }
 
-.welcome-img {
+.top-img {
   height: 75%;
   margin-right: 1em;
-  opacity: 0.75;
+  -webkit-animation: fadein 5s;
+          animation: fadein 5s;
 }
 
 .line {
   height: 15%;
   border: 4px solid #af1c1c;
-  opacity: 0.75;
+  -webkit-animation: fadein 5s;
+          animation: fadein 5s;
 }
 
-@media (min-width: 50em) {
-  .welcome-title {
-    font-size: 3vw;
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
 
@@ -78,16 +92,6 @@ body a {
           justify-content: center;
 }
 
-#about .bg {
-  background-color: #b2adb2;
-  -webkit-clip-path: circle(78.2% at 1% 100%);
-          clip-path: circle(78.2% at 1% 100%);
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: -1;
-}
-
 .about-title h1 {
   display: block;
   color: #af1c1c;
@@ -103,6 +107,8 @@ body a {
   font-family: 'Oswald', sans-serif;
   font-weight: 900;
   font-size: 0.25em;
+  -ms-flex-line-pack: center;
+      align-content: center;
 }
 
 .about-img {
@@ -114,43 +120,8 @@ body a {
           box-shadow: #2f2f282f 5px 5px 5px;
 }
 
-.about-me .row {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-}
-
-@supports (display: grid) {
-  .about-me {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: [port-start] minmax(6em, 1fr) [name-start] minmax(6em, 1fr) [img-end] 2fr [port-end];
-        grid-template-columns: [port-start] minmax(6em, 1fr) [name-start] minmax(6em, 1fr) [img-end] 2fr [port-end];
-  }
-  .about-img {
-    display: -ms-grid;
-    display: grid;
-    grid-column: port / img;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1 / 2;
-  }
-  .about-title {
-    display: -ms-grid;
-    display: grid;
-    grid-column: name-start / port;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1 / 2;
-    -ms-grid-row-align: end;
-        align-self: end;
-  }
-}
-
 #skills {
   margin-top: 1em;
-  background: url(../img/laptop.jpg) center center repeat fixed;
   background-size: cover;
   padding: 140px 0;
   display: -webkit-box;
@@ -172,7 +143,7 @@ body a {
   min-width: 490px;
 }
 
-#skills img {
+#skills .icons img {
   padding: 0.5em;
 }
 
