--- a/css/sections/_about-me.scss
+++ b/css/sections/_about-me.scss
@@ -1,57 +1,25 @@
-#about {
-  .bg {
-    background-color: darken(#f0eff0, 25%);
-    clip-path: circle(78.2% at 1% 100%);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
+.about-title {
+  h1 {
+    display: block;
+    color: #af1c1c;
+    text-shadow: 1px 1px 1px #f0eff0;
+    font-size: 5em;
+    font-family: 'Oswald', sans-serif;
+  }
+  span {
+    display: block;
+    color: #2f2f28;
+    text-shadow: 1px 1px 1px #f0eff0;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 900;
+    font-size: 0.25em;
+    align-content: center;
   }
 }
-.about-title h1 {
-  display: block;
-  color: #af1c1c;
-  text-shadow: 1px 1px 1px #f0eff0;
-  font-size: 5em;
-  font-family: 'Oswald', sans-serif;
-}
-.about-title span {
-  display: block;
-  color: #2f2f28;
-  text-shadow: 1px 1px 1px #f0eff0;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 900;
-  font-size: 0.25em;
-}
-
 .about-img {
   margin-top: 1em;
   margin-left: 1em;
   max-height: 35em;
   border-radius: 30%;
   box-shadow: #2f2f282f 5px 5px 5px;
-}
-.about-me .row {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-@supports (display: grid) {
-  .about-me {
-    display: grid;
-    grid-template-columns:
-      [port-start] minmax(6em, 1fr) [name-start] minmax(6em, 1fr)
-      [img-end] 2fr [port-end];
-  }
-  .about-img {
-    display: grid;
-    grid-column: port / img;
-    grid-row: 1 / 2;
-  }
-  .about-title {
-    display: grid;
-    grid-column: name-start / port;
-    grid-row: 1 / 2;
-    align-self: end;
-  }
 }
