--- a/css/sections/_skills.scss
+++ b/css/sections/_skills.scss
@@ -11,7 +11,7 @@
     border-radius: 50%;
     padding: 1em;
     margin: 1em;
-    min-width: 490px;
+    min-width: 300px;
     img {
       padding: 0.5em;
     }
@@ -19,7 +19,7 @@
   p {
     font-size: 4em;
     font-weight: 900;
-    color: #f0eff0;
+    color: black;
     text-align: center;
     text-shadow: #af1c1c 1px 1px 1px;
   }
